@@ -1,6 +1,4 @@
-$NetBSD: distinfo,v 1.3 2002/10/16 15:57:08 jlam Exp $
+$NetBSD: distinfo,v 1.4 2002/12/19 14:51:41 jlam Exp $
 
-SHA1 (oss397c-netbsd-v1.5.tar.gz) = a6873a0aead8e896a9ff9ca6af20ed1abc4eca60
-Size (oss397c-netbsd-v1.5.tar.gz) = 1094890 bytes
-SHA1 (oss397e-netbsd-v1.6.tar.gz) = f5e735994ddcebc8a0b781c27569ba75b33b4e43
-Size (oss397e-netbsd-v1.6.tar.gz) = 1089864 bytes
+SHA1 (oss397f-netbsd-v1.6.tar.gz) = 99f51bb7f683ce81814d4beac5acad89a4133cf3
+Size (oss397f-netbsd-v1.6.tar.gz) = 1110544 bytes
