@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.842 2002/12/19 14:48:33 jmmv Exp $
+$NetBSD: CHANGES,v 1.843 2002/12/19 14:52:29 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2002:
 
@@ -4013,3 +4013,4 @@ Changes to the packages collection and infrastructure in 2002:
 	Updated sysbuild to 1.6 [jmmv 2002-12-19]
 	Added gimageview-0.2.10 [grant 2002-12-19]
 	Updated pkg_comp to 1.3 [jmmv 2002-12-19]
+	Updated oss to 3.9.7f [jlam 2002-12-19]
